# lldb-mix

./: .gitignore  README.md  lldb_mix_loader.py
lldb_mix/: __init__.py  bootstrap.py  deref.py
lldb_mix/arch/: __init__.py  abi.py  arm32.py  arm64.py  base.py  info.py  match.py  reginfo.py  registry.py  riscv.py  view.py  x64.py  x86.py
lldb_mix/commands/: antidebug.py  bp.py  breakpoints.py  conf.py  context.py  deref.py  disasm.py  dump.py  mixhelp.py  patch.py  regions.py  registry.py  ret.py  run.py  search.py  session.py  skip.py  utils.py  watch.py
lldb_mix/context/: formatting.py  header.py  layout.py  manager.py  types.py
lldb_mix/core/: addressing.py  breakpoints.py  config.py  disasm.py  flow.py  lldb_formats.py  lldb_settings.py  memory.py  modules.py  patches.py  paths.py  regs.py  session.py  session_store.py  settings.py  (+7 more)
samples/: CMakeLists.txt  sample_basic.c  sample_branch.c
scripts/: install.py
tests/: arch_test_utils.py  test_arch_flags.py  test_arch_info.py  test_arch_registry.py  test_args_pane_format.py  test_breakpoints_helpers.py  test_code_pane_format.py  test_command_utils.py  test_conf_command.py  test_conf_config.py  test_context_theme.py  test_deref.py  test_deref_command.py  test_disasm_format.py  test_dump_parse.py  test_findmem_parse.py  test_flow_targets.py  test_hexdump.py  test_hexdump_words.py  test_integration_lldb.py  test_lldb_settings.py  test_patches.py  test_paths.py  test_regions_format.py  test_regs_pane.py  test_rr_command.py  test_session_store.py  test_skip_command.py  test_symbols.py  test_watchlist.py
(+19 files in other folders)
